--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <span id="markets">1% marketing power</span> <br><br>
         <span id="stocks">$0 in stock funds</span> <br><br>
         <button id="doubler" onclick="ye()">x2 cheddar cheese per click (500 cheddar cheese)</button><br><br>
-        <button id="coubler" onclick="che()">+1 cheddar cheese per second (20python superduper.py0 cheddar cheese)</button><br><br>
+        <button id="coubler" onclick="che()">+1 cheddar cheese per second (200 cheddar cheese)</button><br><br>
         <button id="sellcheese" onclick="sell()">Sell cheddar cheese at a rate of $1 per cheddar cheese</button> <br><br>
         <input type="range" min="1" max="100" value="1" id="marketing" width="50vw"> <span id="ismuch"></span> <button onclick="market()">Confirm marketing upgrades?</button> <br><br>
         <button id="getstocks" onclick="stonks()">Invest in stocks (1% appreciation every 10 seconds, 1% chance of market crash every 10 seconds)</button><br><br>
